--- a/DeliveryService/manifest.json
+++ b/DeliveryService/manifest.json
@@ -1,16 +1,10 @@
 ﻿{
   "Name": "DeliveryService",
   "Author": "AxesOfEvil",
-  "Version": "0.10.3",
+  "Version": "0.10.3-unofficial.curtiola",
   "Description": "Move items between chests nightly",
   "UniqueID": "AxesOfEvil.DeliveryService",
   "EntryDll": "DeliveryService.dll",
   "MinimumApiVersion": "4.0.0",
-  "UpdateKeys": ["Nexus:5187"],
-  "Dependencies": [
-    {
-      "UniqueID": "Alek.MegaStorage",
-      "IsRequired": false
-    }
-  ]
+  "UpdateKeys": ["Github:Curtiola/SV_DeliveryService"]
 }
