--- a/DeliveryService/manifest.json
+++ b/DeliveryService/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "Name": "DeliveryService",
   "Author": "AxesOfEvil",
-  "Version": "0.10.3-unofficial.curtiola",
+  "Version": "0.10.2-unofficial.1-curtiola",
   "Description": "Move items between chests nightly",
   "UniqueID": "AxesOfEvil.DeliveryService",
   "EntryDll": "DeliveryService.dll",
